--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prod": "vite build && vite preview"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
